--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ Depends:
     R (>= 2.3.0)
 Imports: 
     fastdigest
+Remotes:
+    metrumresearchgroup/vcs
 License: GPL-2 | GPL-3
 URL: https://github.com/yonicd/gdigest
 BugReports: https://github.com/yonicd/gdigest/issues
 LazyData: true
 NeedsCompilation: no
-Packaged: 2017-01-31 14:00:00 UTC; Yoni
+Packaged: 2017-09-06 14:00:00 UTC; Yoni
 RoxygenNote: 6.0.1
