--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 .Rproj.user
 .Rhistory
-.RData
-.Ruserdata
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+.rcache/1e71175b5d1c73d4
+.rcache/_1e71175b5d1c73d4
