--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(as.digest)
 export(digest_dictionary)
 export(load_dictionary)
 export(synch_remote)
-importFrom(fastdigest,fastdigest)
+importFrom(digest,digest)
 importFrom(vcs,ls_remote)
