--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: This package helps maintain cached entries of R objects on a remote
 Depends:
     R (>= 2.3.0)
 Imports: 
-    fastdigest
+    digest
 Remotes:
     metrumresearchgroup/vcs
 License: GPL-2 | GPL-3
