--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+.Rproj
 .Rproj.user
 .Rhistory
 .rcache/1e71175b5d1c73d4
+.rcache/37d450d4261bf32e
 .rcache/_1e71175b5d1c73d4
+.rcache/_37d450d4261bf32e
