--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,21 @@ export(attach_mem_hash)
 export(digest_dictionary)
 export(get_cache)
 export(load_dictionary)
+export(memofit)
 export(memoise_wrapper)
 export(synch_remote)
 export(unpack_cache)
+import(shiny)
 importFrom(digest,digest)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(hbgd,get_avail_methods)
+importFrom(miniUI,gadgetTitleBar)
+importFrom(miniUI,miniContentPanel)
+importFrom(miniUI,miniPage)
+importFrom(miniUI,miniTitleBarButton)
+importFrom(plyr,ldply)
 importFrom(vcs,ls_remote)
